--- a/index.html
+++ b/index.html
@@ -3,22 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> Biblioteca Start </title>
-  <link rel="stylesheet" href="reset.css">
-<link rel ="stylesheet" href="style.css">
-</head>
+    <title> Biblioteca Start</title>
+    <link rel="stylesheet" href="style.css">
+</head> 
 <body>
-
-   <header class="cabecalho">
-    <span class="cabecalho__menu-hamburger">
-    </span>
-    <img src="IMG/Logo.svg" alt="logotipo da biblioteca">
-    <img src="IMG/Favoritos.svg" alt="meus favoritos">
-    <img src="IMG/Emprestimos.svg" alt=" meusempréstimos">
-    <img src="IMG/Usuario.svg" alt="meu perfil">
-    
-
-</header>
-    
+    <header class="cabecalho">
+        <div class="container">
+            <img class="container_imagem" scr="img/Logo.svg" alt="logotipo">
+            <h1 class="container_titulo"> Biblioteca <b class=/h1>
+        </div>
+    </header> 
 </body>
 </html>
